--- a/templates/flower_recognition.html
+++ b/templates/flower_recognition.html
@@ -96,10 +96,10 @@
 					{% if pathOfImg %}
 					<div class="owl-banner owl-carousel">
 						<div class="item">
-							<img src="../static/uploads/{{pathOfImg}}" alt="">
+							<img src="{{pathOfImg}}" alt="">
 						</div>
 						<div class="item">
-							<img src="../static/uploads/{{pathOfImg}}" alt="">
+							<img src="{{pathOfImg}}" alt="">
 						</div>
 					</div>
 					{% endif %}
